<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.matsim-scenarios</groupId>
	<artifactId>matsim-kelheim</artifactId>
	<version>1.0-SNAPSHOT</version>

	<name>MATSim Kelheim Model</name>
	<description>A transport model of the district of Kelheim and it's surroundings</description>

	<properties>
		<!-- release -->
		<!-- <matsim.version>13.0</matsim.version> -->

		<!-- PR-labelled release -->
		<!--<matsim.version>14.0-PR1452</matsim.version>-->

		<!-- snapshot == not recommended: rather use PR-labelled release!-->
		<matsim.version>14.0-SNAPSHOT</matsim.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<repositories>
	  <!--Note that in general repositories are not transitive, so they need to be repeated at every level where needed.-->
		<repository>
			<!-- Geotools is not on Maven central -->
			<id>osgeo</id>
			<name>Geotools repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
		</repository>
		<repository>
			<!-- Repository for MATSim (MATSim is not on Maven central, releases and snapshots) -->
			<id>matsim</id>
			<url>https://repo.matsim.org/repository/matsim</url>
		</repository>
		<!-- for dependencies of osm-network-reader -->
		<repository>
			<id>topobyte</id>
			<url>https://mvn.topobyte.de</url>
		</repository>
		<!-- for dependencies of osm-network-reader -->
		<repository>
			<id>slimjars</id>
			<url>https://mvn.slimjars.com</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<!-- This is the matsim "core": -->
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>drt</artifactId>
			<version>${matsim.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<!-- Include the JUnit testing library.  Not transitive. -->
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<!--MATSim test infrastructure.  Not transitive.-->
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<type>test-jar</type>
			<version>${matsim.version}</version>
			<scope>test</scope>
		</dependency>

		<!--some contribs:-->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>application</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>freight</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>vsp</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<groupId>one.util</groupId>
			<artifactId>streamex</artifactId>
			<version>0.7.3</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<forkMode>once</forkMode>
					<!-- avoid out of memory errors: -->
					<argLine>-Xmx9500m -Djava.awt.headless=true -Dmatsim.preferLocalDtds=true</argLine>
					<!--necessary in tu berlin gitlab. BUT not good in other places, so solve by command line switch only where needed.  kai, nov'18-->
					<!--<useSystemClassLoader>false</useSystemClassLoader>-->
				</configuration>
			</plugin>

			<plugin>
<!--				The maven-shade-plugin replaces the maven-assembly-plugin to configure "mvn package". The assembly-plugin regularly-->
<!--				creates problems when GeoTools are used, which the shade-plugin does not (see-->
<!--				https://stackoverflow.com/questions/27429097/geotools-cannot-find-hsql-epsg-db-throws-error-nosuchauthoritycodeexception/27431381#27431381)-->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<outputFile>${project.basedir}/${project.build.finalName}.jar</outputFile>
							<transformers>
								<!-- The following sets the main class for the executable jar as you otherwise would with the assembly plugin -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>org.matsim.run.RunKelheimScenario</Main-Class>
										<Specification-Vendor>org.matsim</Specification-Vendor>
										<Implementation-Vendor>org.matsim</Implementation-Vendor>
										<Implementation-Version>${project.version}</Implementation-Version>
									</manifestEntries>
								</transformer>
								<!-- The following merges the various GeoTools META-INF/services files         -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
							</transformers>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.RSA</exclude>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
